# atoll-paper

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/Shapefiles/: Atoll_transects.dbf  Atoll_transects.shp  Atoll_transects.shx  Atoll_transects_240725.dbf  Atoll_transects_240725.qmd  Atoll_transects_240725.shx  atolls_GADM_EPSG4326_voronoi_Sep2025.shp
data/Shapefiles/Atoll_GADM_Voronoi_Shapefiles/: atolls_GADM_EPSG4326_voronoi_Sep2025.shx
data/processed/: Atoll_BEWARE_processed_outputs_2020-2150.csv  Atoll_transects_centroids.dbf  Atoll_transects_centroids.shp  Atoll_transects_centroids.shx
notebooks/: 010_load_and_preprocess_shapefiles.py  011_load_and_preprocess_COWCLIP.py  011_load_and_regrid_COWCLIP_Hs.py  011b_load_and_regrid_COWCLIP_Tm.py  011b_regrid_COWCLIP_Hs.py  011b_regrid_COWCLIP_Tm.py  012_load_SLR_projections.py  013_load_COAST-RP.py  014_load_and_extend_BEWARE.py  015_load_and_preprocess_ERA5.py  020_combine_input_datasets.py  030_extract_from_BEWARE.py  031_export_smaller_results.py  032_quality_check.py  100_plot_runup_based_on_eta.py  101_compare_BEWARE_extension_with_original.py  101_download_COWCLIP.py  102_count_transects_per_atoll.py  103_download_comparison_data_Hoeke_ORAS5.py  104_download_comaprison_data_CAWR_Hindcast.py  BEWARE_trial.py
notebooks/additional_notebooks/: 100_download_BEWARE_database.py  101_download_COWCLIP.py  102_download_AR6_SLR_projections.py  103_download_COAST-RP.py  104_download_comaprison_data_CAWR_Hindcast.py  104_download_comparison_data_CAWR_Hindcast.py  105_download_comparison_data_Hoeke_ORAS5.py  106_plot_runup_based_on_eta.py
path/to/destination/repository/: .copier-answers.yml  pyproject.toml
src/: settings.py
