[project]
authors = [
    { name = "Tessa Möller", email = "moeller@iiasa.ac.at"},
]
requires-python = ">=3.9"
dependencies = [
    "pre-commit>=3.3.1",
    "jupyterlab>=4.0.0",
    "jupytext>=1.15.2",
]
name = "prototype"
version = "0.1.0"
description = "Pipeline to handle atoll transect data and combine with necessary input data to integrate with BEWARE."
readme = "README.md"

[tool.uv]
package = false

[tool.jupytext]
formats = "ipynb,py:percent"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "D",
    "PL",
    "TRY",
    "NPY",
    "RUF",
    "UP",
    "S",
]
unfixable = [ ]
ignore = [
    "D200",
    "D400",
    "UP007",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
